--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,42 @@
 .DS_Store
+checkpoints/checkpoint
+checkpoints/weights.05hdf5.data-00000-of-00001
+checkpoints/weights.05hdf5.index
+checkpoints/weights.10hdf5.data-00000-of-00001
+checkpoints/weights.10hdf5.index
+checkpoints/weights.15hdf5.data-00000-of-00001
+checkpoints/weights.15hdf5.index
+checkpoints/weights.20hdf5.data-00000-of-00001
+checkpoints/weights.20hdf5.index
+checkpoints/weights.25hdf5.data-00000-of-00001
+checkpoints/weights.25hdf5.index
+checkpoints/weights.30hdf5.data-00000-of-00001
+checkpoints/weights.30hdf5.index
+checkpoints/weights.35hdf5.data-00000-of-00001
+checkpoints/weights.35hdf5.index
+checkpoints/weights.40hdf5.data-00000-of-00001
+checkpoints/weights.40hdf5.index
+checkpoints/weights.45hdf5.data-00000-of-00001
+checkpoints/weights.45hdf5.index
+checkpoints/weights.50hdf5.data-00000-of-00001
+checkpoints/weights.50hdf5.index
+checkpoints/weights.55hdf5.data-00000-of-00001
+checkpoints/weights.55hdf5.index
+checkpoints/weights.60hdf5.data-00000-of-00001
+checkpoints/weights.60hdf5.index
+checkpoints/weights.65hdf5.data-00000-of-00001
+checkpoints/weights.65hdf5.index
+checkpoints/weights.70hdf5.data-00000-of-00001
+checkpoints/weights.70hdf5.index
+checkpoints/weights.75hdf5.data-00000-of-00001
+checkpoints/weights.75hdf5.index
+checkpoints/weights.80hdf5.data-00000-of-00001
+checkpoints/weights.80hdf5.index
+checkpoints/weights.85hdf5.data-00000-of-00001
+checkpoints/weights.85hdf5.index
+checkpoints/weights.90hdf5.data-00000-of-00001
+checkpoints/weights.90hdf5.index
+checkpoints/weights.95hdf5.data-00000-of-00001
+checkpoints/weights.95hdf5.index
+checkpoints/weights.100hdf5.data-00000-of-00001
+checkpoints/weights.100hdf5.index
